[vm,ffi] Avoid linking test DLLs to `dart.exe`
The `ffi_test_functions` shared library needs to access functions from
`dart_api.h` and `dart_native_api.h`, which that are only available in
the Dart executable.

UNIX shared libraries can have undefined symbols, which are resolved at
runtime and can be found in the loading executable. Windows DLLs cannot
have undefined symbols, but they can be dynamically linked to an
executable (in this case `dart.exe`). This requires the DLL to be able
to find the executable at runtime.

A better solution is to include implementations for the Dart APIs in the
DLL itself, that use `GetModuleHandle(NULL)` to get a handle to the
executable and `GetProcAddress` to get the address of the function.

This is what `dart_api_win.c` does.

Fixes https://github.com/dart-lang/sdk/issues/40579
Fixes https://github.com/dart-lang/sdk/issues/59677

TEST=ci

--- a/runtime/bin/BUILD.gn
+++ b/runtime/bin/BUILD.gn
@@ -1123,6 +1123,9 @@ executable("run_vm_tests") {
 shared_library("entrypoints_verification_test") {
   deps = [ ":dart" ]
   sources = [ "entrypoints_verification_test.cc" ]
+  if (is_win) {
+    sources += [ "dart_api_win.c" ]
+  }
   include_dirs = [ ".." ]
 }
 
@@ -1149,19 +1152,17 @@ shared_library("ffi_test_functions") {
     "ffi_test/ffi_test_functions_generated_2.cc",
     "ffi_test/ffi_test_functions_vmspecific.cc",
   ]
+
+  if (is_win) {
+    sources += [ "dart_api_win.c" ]
+  }
+
   if (is_win && current_cpu == "x64") {
     sources += [ "ffi_test/clobber_x64_win.S" ]
   } else if (!is_win) {
     sources += [ "ffi_test/clobber_$current_cpu.S" ]
   }
   include_dirs = [ ".." ]
-
-  if (is_win) {
-    # TODO(dartbug.com/40579): This wrongly links in dart.exe on precompiled.
-    libs = [ "dart.lib" ]
-    abs_root_out_dir = rebase_path(root_out_dir)
-    ldflags = [ "/LIBPATH:$abs_root_out_dir" ]
-  }
 }
 
 # DartLibFuzzer only "exists" for restricted configurations.
